# short_link

./: .env.example  .gitignore  docker-compose.yml  makefile
client/: .env.example  .eslintrc.js  .prettierrc.js  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
client/src/: App.tsx  Home.tsx  Link.tsx  api.ts  config.ts  index.tsx  routes.ts  types.ts
nginx/: Dockerfile  nginx.conf
server/: .env.example  .env.prod  Cargo.toml  Dockerfile  README.md  db.docker-compose.yml  makefile
server/migrations/2023-02-04-170836_create_links/: up.sql
server/migrations/2023-02-05-074502_links_add_column_created_at/: down.sql  up.sql
server/src/: config.rs  controller.rs  lib.rs  main.rs  models.rs  openapi.rs  repository.rs  scheduler.rs  schema.rs  service.rs  structs.rs
