[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.0"
actix-rt = "2.8.0"
actix-cors = "0.6.4"
r2d2 = "0.8.10"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
serde = {version = "1.0.152", features = ["derive"]}
chrono = "0.4.23"
dotenvy = "0.15"
config = "0.13.3"
nanoid = "0.4.0"
tokio_schedule = "0.3.0"
utoipa = { version = "3.0.1",features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["actix-web"] }
